src/test/ui/numeric/numeric-cast-without-suggestion.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast-without-suggestion.rs:17:5
   |
LL |     foo::<usize>(x_f64);
   |     ^^^^^^^^^^^^^-----^
   |                  |
   |                  expected `usize`, found `f64`
   |
note: function defined here
  --> $DIR/numeric-cast-without-suggestion.rs:1:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({usize});
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast-without-suggestion.rs:18:5
   |
LL |     foo::<usize>(x_f32);
   |     ^^^^^^^^^^^^^-----^
   |                  |
   |                  expected `usize`, found `f32`
   |
note: function defined here
  --> $DIR/numeric-cast-without-suggestion.rs:1:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({usize});
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast-without-suggestion.rs:19:5
   |
LL |     foo::<isize>(x_f64);
   |     ^^^^^^^^^^^^^-----^
   |                  |
   |                  expected `isize`, found `f64`
   |
note: function defined here
  --> $DIR/numeric-cast-without-suggestion.rs:1:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({isize});
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast-without-suggestion.rs:20:5
   |
LL |     foo::<isize>(x_f32);
   |     ^^^^^^^^^^^^^-----^
   |                  |
   |                  expected `isize`, found `f32`
   |
note: function defined here
  --> $DIR/numeric-cast-without-suggestion.rs:1:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({isize});
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast-without-suggestion.rs:21:5
   |
LL |     foo::<u64>(x_f64);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `u64`, found `f64`
   |
note: function defined here
  --> $DIR/numeric-cast-without-suggestion.rs:1:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast-without-suggestion.rs:22:5
   |
LL |     foo::<u64>(x_f32);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `u64`, found `f32`
   |
note: function defined here
  --> $DIR/numeric-cast-without-suggestion.rs:1:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast-without-suggestion.rs:23:5
   |
LL |     foo::<i64>(x_f64);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `i64`, found `f64`
   |
note: function defined here
  --> $DIR/numeric-cast-without-suggestion.rs:1:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast-without-suggestion.rs:24:5
   |
LL |     foo::<i64>(x_f32);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `i64`, found `f32`
   |
note: function defined here
  --> $DIR/numeric-cast-without-suggestion.rs:1:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i64});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast-without-suggestion.rs:25:5
   |
LL |     foo::<u32>(x_f64);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `u32`, found `f64`
   |
note: function defined here
  --> $DIR/numeric-cast-without-suggestion.rs:1:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast-without-suggestion.rs:26:5
   |
LL |     foo::<u32>(x_f32);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `u32`, found `f32`
   |
note: function defined here
  --> $DIR/numeric-cast-without-suggestion.rs:1:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast-without-suggestion.rs:27:5
   |
LL |     foo::<i32>(x_f64);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `i32`, found `f64`
   |
note: function defined here
  --> $DIR/numeric-cast-without-suggestion.rs:1:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast-without-suggestion.rs:28:5
   |
LL |     foo::<i32>(x_f32);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `i32`, found `f32`
   |
note: function defined here
  --> $DIR/numeric-cast-without-suggestion.rs:1:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i32});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast-without-suggestion.rs:29:5
   |
LL |     foo::<u16>(x_f64);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `u16`, found `f64`
   |
note: function defined here
  --> $DIR/numeric-cast-without-suggestion.rs:1:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u16});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast-without-suggestion.rs:30:5
   |
LL |     foo::<u16>(x_f32);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `u16`, found `f32`
   |
note: function defined here
  --> $DIR/numeric-cast-without-suggestion.rs:1:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u16});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast-without-suggestion.rs:31:5
   |
LL |     foo::<i16>(x_f64);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `i16`, found `f64`
   |
note: function defined here
  --> $DIR/numeric-cast-without-suggestion.rs:1:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i16});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast-without-suggestion.rs:32:5
   |
LL |     foo::<i16>(x_f32);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `i16`, found `f32`
   |
note: function defined here
  --> $DIR/numeric-cast-without-suggestion.rs:1:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i16});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast-without-suggestion.rs:33:5
   |
LL |     foo::<u8>(x_f64);
   |     ^^^^^^^^^^-----^
   |               |
   |               expected `u8`, found `f64`
   |
note: function defined here
  --> $DIR/numeric-cast-without-suggestion.rs:1:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u8});
   |     ^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast-without-suggestion.rs:34:5
   |
LL |     foo::<u8>(x_f32);
   |     ^^^^^^^^^^-----^
   |               |
   |               expected `u8`, found `f32`
   |
note: function defined here
  --> $DIR/numeric-cast-without-suggestion.rs:1:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({u8});
   |     ^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast-without-suggestion.rs:35:5
   |
LL |     foo::<i8>(x_f64);
   |     ^^^^^^^^^^-----^
   |               |
   |               expected `i8`, found `f64`
   |
note: function defined here
  --> $DIR/numeric-cast-without-suggestion.rs:1:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i8});
   |     ^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast-without-suggestion.rs:36:5
   |
LL |     foo::<i8>(x_f32);
   |     ^^^^^^^^^^-----^
   |               |
   |               expected `i8`, found `f32`
   |
note: function defined here
  --> $DIR/numeric-cast-without-suggestion.rs:1:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({i8});
   |     ^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-cast-without-suggestion.rs:37:5
   |
LL |     foo::<f32>(x_f64);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `f32`, found `f64`
   |
note: function defined here
  --> $DIR/numeric-cast-without-suggestion.rs:1:4
   |
LL | fn foo<N>(_x: N) {}
   |    ^^^    -----
help: provide an argument of the correct type
   |
LL |     foo({f32});
   |     ^^^^^^^^^^

error: aborting due to 21 previous errors

For more information about this error, try `rustc --explain E0308`.
